After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725818 - Fixes to shift+click handling
Fixes to shift+click handling
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-06 12:43 UTC by Claudio Saavedra
Modified: 2014-03-06 13:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-window: fix shift+click (764 bytes, patch)
2014-03-06 12:43 UTC, Claudio Saavedra
committed Details | Review
Remove redundant comparison (703 bytes, patch)
2014-03-06 12:43 UTC, Claudio Saavedra
committed Details | Review
ephy-window: move check for event state earlier (1.21 KB, patch)
2014-03-06 12:44 UTC, Claudio Saavedra
reviewed Details | Review
ephy-window: move event state and button checks earlier (1.60 KB, patch)
2014-03-06 13:28 UTC, Claudio Saavedra
committed Details | Review

Description Claudio Saavedra 2014-03-06 12:43:51 UTC
A few WTFs that could be fixed
Comment 1 Claudio Saavedra 2014-03-06 12:43:54 UTC
Created attachment 271094 [details] [review]
ephy-window: fix shift+click

The check for the clicked address was inverted so this was not working
at all.
Comment 2 Claudio Saavedra 2014-03-06 12:43:59 UTC
Created attachment 271095 [details] [review]
Remove redundant comparison
Comment 3 Claudio Saavedra 2014-03-06 12:44:03 UTC
Created attachment 271096 [details] [review]
ephy-window: move check for event state earlier

Micro-optimization
Comment 4 Carlos Garcia Campos 2014-03-06 13:07:20 UTC
Review of attachment 271094 [details] [review]:

I prefer not to look at git blame :-P
Comment 5 Carlos Garcia Campos 2014-03-06 13:08:13 UTC
Review of attachment 271095 [details] [review]:

Ok
Comment 6 Carlos Garcia Campos 2014-03-06 13:09:35 UTC
Review of attachment 271096 [details] [review]:

::: src/ephy-window.c
@@ +1906,3 @@
+	{
+		return FALSE;
+	}

I think we can also check if it's the primary button here and return early
Comment 7 Claudio Saavedra 2014-03-06 13:28:47 UTC
Created attachment 271100 [details] [review]
ephy-window: move event state and button checks earlier

Micro-optimization
Comment 8 Carlos Garcia Campos 2014-03-06 13:30:38 UTC
Review of attachment 271100 [details] [review]:

perfect
Comment 9 Claudio Saavedra 2014-03-06 13:32:01 UTC
Attachment 271094 [details] pushed as b70985c - ephy-window: fix shift+click
Attachment 271095 [details] pushed as 6ed9eb9 - Remove redundant comparison
Attachment 271100 [details] pushed as 285916f - ephy-window: move event state and button checks earlier