ephy-window: fix shift+click

The check for the clicked address was inverted so this was not working
at all.

https://bugzilla.gnome.org/show_bug.cgi?id=725818